--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.20",
     "@types/react-native-vector-icons": "^6.4.16",
     "react": "18.2.0",
